[metadata]
name = ordotools
version = 0.0.11
description=A set of tools for producing a traditional Catholic Ordo, given a year and diocese
long_description = file: README.md
author=corei8 (Fr. G.R.Barnes)
author_email=corei8.github@gmail.com
classifiers = 
    Programming Language :: Python :: 3

[options]
install_requires =
    python-dateutil
packages = find:

[options.packages.find]
where=ordotools
include=
    tools*
    sanctoral*

