[metadata]
name = ordotools
version = 0.0.43
description = A set of tools for producing a traditional Catholic Ordo, given a year and diocese
long_description = file: README.rst
long_desciption_content_type = text/rst
author = corei8 (Fr. G.R.Barnes)
author_email = corei8.github@gmail.com
classifiers = 
    Programming Language :: Python :: 3

[options]
install_requires =
    python-dateutil
packages = 
    ordotools
    ordotools.tools
    ordotools.sanctoral
    ordotools.sanctoral.country
    ordotools.sanctoral.diocese
package_dir =
    = .
